# coreMusicPlayer

./: ALL_BUILD.vcxproj  CMakeCache.txt  CMakeLists.txt  CMakeLists_minimal.txt  CMakeLists_original.txt  CTestTestfile.cmake  DEVELOPMENT_GUIDE.md  IMPLEMENTATION_SUMMARY.md  INSTALL.vcxproj  INSTALL.vcxproj.filters  README.md  RELEASE_NOTES.md  RUN_TESTS.vcxproj  RUN_TESTS.vcxproj.filters  TASK_PROGRESS.md  TEST_REPORT.md  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  build.bat  build.sh  build_foobar_integration.bat  build_foobar_integration.sh  cmake_install.cmake  coreMusicPlayer.sln  coreMusicPlayer.vcxproj  coreMusicPlayer.vcxproj.filters  run_tests.bat  run_tests.sh  simple_build.bat  test_build.cpp  test_build.sh  test_build.vcxproj  test_build.vcxproj.filters
.github/workflows/: build.yml
REQUIREMENTS/: API_DOCUMENTATION.md  ARCHITECTURE.md  AUDIO_ENGINE.md  CHANGELOG.md  DEPENDENCIES.md  DEVELOPMENT_PLAN.md  DEVELOPMENT_ROADMAP.md  DOCUMENTATION_INDEX.md  FAQ.md  FILE_STRUCTURE.md  GUI_IMPLEMENTATION.md  IMPLEMENTATION_CHECKLIST.md  OVERVIEW.md  PROJECT_MANAGEMENT_PLAN.md  README.md  SOURCE_CODE_EXAMPLES.md  TASK.md  TEST_PLAN_OPTIMIZATION.md  TEST_TASK_STATUS.md
REQUIREMENTS/BUILD_AND_DEPLOY/: BUILD_GUIDE.md  DEPLOYMENT.md  IMPLEMENTATION_CHECKLIST.md  TEST_STRATEGY.md
REQUIREMENTS/DESIGN/: API_DOCUMENTATION.md  ARCHITECTURE.md  ERROR_HANDLING.md  FILE_STRUCTURE.md
REQUIREMENTS/IMPLEMENTATION/: AUDIO_ENGINE.md  FOOBAR2000_INTEGRATION.md  PLATFORM_SPECIFICS.md  SOURCE_EXAMPLES.md
REQUIREMENTS/REQUIREMENTS/: CODE_STANDARDS.md  PERFORMANCE_REQUIREMENTS.md  PROJECT_REQUIREMENTS.md  TERMINOLOGY_AND_STANDARDS.md
REQUIREMENTS/SUPPORT/: TROUBLESHOOTING.md  USER_MANUAL.md
config/: default.json
docs/: API_DOCUMENTATION.md  CORE_DOCUMENTATION.md
include/: core_music_player.h
include/audio/: audio_buffer.h  audio_engine.h  audio_format.h  decoder_factory.h  decoder_interface.h  decoder_manager.h  device_manager.h  sample_rate_converter.h
include/core/: audio_auto_wah.h  audio_auto_wah_modulated.h  audio_auto_wah_modulated_2.h  audio_auto_wah_modulated_3.h  audio_biquad_filter.h  audio_buffer.h  audio_chorus.h  audio_chorus_modulated.h  audio_chorus_modulated_2.h  audio_chorus_modulated_3.h  audio_compressor.h  audio_converter.h  audio_decoder.h  audio_decoder_factory.h  audio_delay.h  audio_device_manager.h  audio_distortion.h  audio_dynamic_range_compressor.h  audio_effects.h  audio_effects_chain.h  audio_equalizer.h  audio_fade.h  audio_filter.h  audio_flanger.h  audio_flanger_modulated.h  audio_flanger_modulated_2.h  audio_flanger_modulated_3.h  audio_format.h  audio_format_converter.h  audio_gate.h  audio_limiter.h  audio_manager.h  audio_metadata.h  audio_mixer.h  audio_multiband_eq.h  audio_peak_limiter.h  audio_phaser.h  audio_phaser_modulated.h  (+58 more)
qt_gui/: qt_gui.pro
simple_build/: ALL_BUILD.vcxproj  CMakeCache.txt  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake  coreMusicPlayer.sln  coreMusicPlayer.vcxproj  coreMusicPlayer.vcxproj.filters
src/: CMakeLists.txt  core_music_player.cpp  main.cpp
src/audio/: CMakeLists.txt  audio_buffer.cpp  audio_engine.cpp  audio_engine.h  audio_format.cpp  decoder_factory.cpp  decoder_manager.cpp  device_manager.cpp  sample_rate_converter.cpp
src/audio/decoders/: flac_decoder.cpp  mp3_decoder.cpp  ogg_decoder.cpp  wav_decoder.cpp
src/audio/dsp/: CMakeLists.txt  equalizer.cpp  equalizer.h  volume_control.cpp  volume_control.h
src/audio/simd/: resampler_avx.cpp  resampler_sse.cpp
src/core/: CMakeLists.txt  audio_auto_wah.cpp  audio_auto_wah_modulated.cpp  audio_auto_wah_modulated_2.cpp  audio_auto_wah_modulated_3.cpp  audio_biquad_filter.cpp  audio_buffer.cpp  audio_chorus.cpp  audio_chorus_modulated.cpp  audio_chorus_modulated_2.cpp  audio_chorus_modulated_3.cpp  audio_compressor.cpp  audio_converter.cpp  audio_decoder.cpp  audio_decoder_factory.cpp  audio_delay.cpp  audio_device_manager.cpp  audio_distortion.cpp  audio_dynamic_range_compressor.cpp  audio_effects.cpp  audio_effects_chain.cpp  audio_equalizer.cpp  audio_fade.cpp  audio_filter.cpp  audio_flanger.cpp  audio_flanger_modulated.cpp  audio_flanger_modulated_2.cpp  audio_flanger_modulated_3.cpp  audio_format_converter.cpp  audio_gate.cpp  audio_limiter.cpp  audio_manager.cpp  audio_metadata.cpp  audio_mixer.cpp  audio_multiband_eq.cpp  audio_peak_limiter.cpp  audio_phaser.cpp  audio_phaser_modulated.cpp  audio_phaser_modulated_2.cpp  audio_phaser_modulated_3.cpp  (+53 more)
src/core/strategies/: complete_strategy.cpp  legacy_strategy.cpp  multi_format_strategy.cpp  multi_format_strategy.h  production_strategy.cpp  realtime_strategy.cpp
src/foobar/: foobar_dsp_adapter.cpp  foobar_dsp_adapter.h  foobar_input_adapter.cpp  foobar_input_adapter.h  foobar_output_adapter.cpp  foobar_output_adapter.h  foobar_plugin_manager.cpp  foobar_plugin_manager.h
src/gui/: CMakeLists.txt  main_window.cpp  main_window.h  main_window.ui  theme_manager.cpp  theme_manager.h
src/platform/: file_utils.cpp  memory_manager.cpp  platform_utils.cpp  thread_manager.cpp
src/platform/linux/: alsa_output.cpp  linux_audio_manager.cpp  linux_filesystem.cpp  linux_network.cpp  linux_platform_factory.cpp
src/platform/macos/: coreaudio_output.cpp  macos_audio_manager.cpp  macos_filesystem.cpp  macos_network.cpp  macos_platform_factory.cpp
src/platform/win32/: win32_audio_manager.cpp  win32_filesystem.cpp  win32_network.cpp  win32_platform_factory.cpp
src/platform/windows/: wasapi_output.cpp
src/utils/: debug_tools.cpp  logger.cpp  performance_counter.cpp
tests/: CMakeLists.txt  audio_buffer_test.cpp  audio_engine_test.cpp  audio_functionality_test.cpp  core_functionality_test.cpp  core_test.cpp  core_utility_test.cpp  end_to_end_tests.cpp  equalizer_tests.cpp  foobar_integration_test.cpp  foobar_unit_test.cpp  performance_test.cpp  platform_tests.cpp  regression_tests.cpp  user_experience_tests.cpp
tests/performance_baselines/: README.md
tests/test_data/: README.md
tests/test_scenarios/: README.md
tests/user_feedback/: README.md
(+81 files in other folders)
